apps/trilium/trilium.yaml
---
# Source: trilium-notes/templates/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium-notes-headless
  labels:
    app.kubernetes.io/name: trilium-notes
    app.kubernetes.io/instance: trilium
    app.kubernetes.io/version: "0.63.7"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: trilium-notes
    app.kubernetes.io/instance: trilium
---
# Source: trilium-notes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium-notes
  labels:
    app.kubernetes.io/name: trilium-notes
    app.kubernetes.io/instance: trilium
    app.kubernetes.io/version: "0.63.7"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: trilium-notes
    app.kubernetes.io/instance: trilium
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium-notes
  labels:
    app.kubernetes.io/name: trilium-notes
    app.kubernetes.io/instance: trilium
    app.kubernetes.io/version: "0.63.7"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: trilium-notes
      app.kubernetes.io/instance: trilium
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trilium-notes
        app.kubernetes.io/instance: trilium
    spec:
      serviceAccountName: trilium-notes
      containers:
        - name: trilium-notes
          image: trilium
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources: {}
          volumeMounts:
            - name: trilium-data
              mountPath: "/srv/trilium-data"
      volumes:
        - name: trilium-data
          persistentVolumeClaim:
            claimName: trilium-data
