apps/trilium/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trilium
  namespace: trilium
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "notes.int.kyledev.co"
  rules:
    - backendRefs:
        - name: trilium-service
          port: 8080
